--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link red="stylesheet" href="css/style.css">
-    <link red="icon" type="" 
+    <link rel="stylesheet" href="css/style.css">
+    <link red="icon" type="image/png" href="imagens/ico.png">
     <title>workshop</title>
 </head>
 <body>
@@ -13,6 +13,23 @@
         <header>
             <h1 class="title">participe do workshop que vai mudar o seu negócio</h1>
         </header>
+        <section>
+            <div class="formContainer">
+                <h2>garanta o seu lugar no workshop do maior especialista em marketing da atualidade</h2>
+                <p>Neste evento, você vai aprender todos os segredos que vão te fazer ser um empreendedor de sucesso sem precisar 
+                contar com a sorte.</p>
+                <form action="">
+                    <input type="text" name="name" id="name" placeholder="Nome">
+                    <input type="text" name="email" id="email" placeholder="E=mail">
+                    <select name="place" id="">
+                        <option value="rj">Rio de Janeiro</option>
+                        <option value="sp">São Paulo</option>
+                        <option value="mg">Minas Gerais</option>
+                        <option value="es">Espirito Santo</option>
+                    </select>
+                </form>
+            </div>
+        </section>
     </div>
 </body>
 </html>
